Fixed jumping animation in example by adding border-width animation and added some descriptive text. Updated base styling.

--- a/examples/animations/app.css
+++ b/examples/animations/app.css
@@ -1,3 +1,13 @@
+:root {
+  --infernoAnimationEnter: border-width .25s ease-out, padding .25s ease-out, height .25s ease-out, opacity .6s ease-in;
+  --infernoAnimationLeave: border-width .25s ease-out, padding 1s ease-out, height 1s ease-out, opacity 1.2s ease-in;
+  --fadeAnimationEnter: opacity 0.1s ease-in;
+  --fadeAnimationLeave: opacity 2s ease-out;
+}
+
+/******************************/
+/* Animate height and opacity */
+/******************************/
 .HeightAndFade-leave {
     /* Leave animation start state */
     opacity: 1;
@@ -6,33 +16,58 @@
 .HeightAndFade-leave-active {
     /* Leave animation transitions */
     overflow: hidden;
-    transition: padding 1s ease-out, height 1s ease-out, opacity 1.2s ease-in;
+    transition: var(--infernoAnimationLeave);
 }
 
 .HeightAndFade-leave-end {
     /* Leave animation end state */
-    height: 0;
     opacity: 0;
+    height: 0;
     padding-top: 0;
     padding-bottom: 0;
+    border-width: 0;
 }
 
 .HeightAndFade-enter {
     /* Enter animation start state */
-    height: 0;
     opacity: 0;
+    height: 0;
     padding-top: 0;
     padding-bottom: 0;
+    border-width: 0;
 }
 
 .HeightAndFade-enter-active {
     /* Enter animation transitions */
-    transition: padding .25s ease-out, height .25s ease-out, opacity .6s ease-in;
+    transition: var(--infernoAnimationEnter);
 }
 
 .HeightAndFade-enter-end {
     /* Enter animation end state */
     opacity: 1;
+}
+
+/*************************/
+/* Simple fade animation */
+/*************************/
+.fade-enter,
+.fade-leave-end {
+  opacity: 0;
+}
+
+.fade-enter-end,
+.fade-leave {
+  opacity: 1;
+}
+
+.fade-leave-active {
+  /* Leave animation transitions */
+  transition: var(--fadeAnimationLeave);
+}
+
+.fade-enter-active {
+  /* Enter animation transitions */
+  transition: var(--fadeAnimationEnter);
 }
 
 article,
@@ -53,7 +88,10 @@ li {
   text-align: center;
   max-width: 10rem;
   border-top: 1px solid #fff;
-} li:hover {
+}
+
+section:hover,
+li:hover {
   background: #3775bb;
 }
 
@@ -61,7 +99,7 @@ span.divider,
 li.divider {
   display: block;
   height: 5px;
-  background: #eee;
+  background: #ccc;
   border-width: 0;
 }
 
@@ -69,7 +107,7 @@ button {
   padding: 0.5rem 1rem;
   margin-top: 0.5rem;
   display: block;
-  background: #4A90E2;
+  background: #35a748;
   color: white;
   border-style: none;
   border-radius: 4px;
@@ -79,6 +117,7 @@ button {
 }
 
 body {
+  font-family: helvetica;
   box-sizing: border-box;
   margin: 0;
   padding: 1rem;
@@ -86,7 +125,8 @@ body {
   gap: 2rem;
   justify-content: center;
   align-items: flex-end;
-  min-height: 100vh;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .App {
@@ -98,19 +138,30 @@ body {
   padding: 1rem;
 }
 
+h1 {
+  transform: rotate(-90deg);
+  font-size: 2rem;
+  font-weight: 800;
+  color: #ddd;
+  text-align: center;
+  margin: 0.5rem;
+  white-space: nowrap;
+  width: 2rem;
+  transform-origin: 50% 50%;
+}
+
 h2 {
-  font-family: helvetica;
   font-size: 1rem;
   font-weight: 100;
   color: #4A90E2;
   text-align: center;
 }
 
-h3 {
-  font-family: helvetica;
-  font-size: 0.8rem;
+p {
+  width: 10rem;
+  font-size: 0.65rem;
   font-weight: 100;
-  color: #4A90E2;
+  color: #888;
   text-align: center;
   margin-top: -0.5em;
 }
